Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -350,12 +350,12 @@
                 <p>Valor R$ 60,00 a R$ 120,00</p>
             </div>
             <div>
-                <h3>3. Nintendo Switch 2</h3>
+                <h3>4. Nintendo Switch 2</h3>
                 <img src="img/foto_cha_004.jpg" alt="Melhor Sugestão" width="200" height="100">
-                <p>Valor R$ 3.500,00 a 4.000,00</p>
+                <p>Valor :)</p>
             </div>
             <div>
-                <h3>PIX</h3>
+                <h3>Chave PIX</h3>
                 <img src="img/imagem_pix.png" alt="PIX" width="300" height="460">
             </div>
         </div>
