Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <p>Casual e leve! Traga seu palpite (Azul ou Rosa).</p>
             </div>
             
-            <a href="https://forms.gle/aevbgx6jJS1DJnYN7" class="rsvp-button">Confirmar Presença (FORM)</a>
+            <a href="https://forms.gle/aevbgx6jJS1DJnYN7" target="_blank" class="rsvp-button">Confirmar Presença (FORM)</a>
         </div>
     </section>
 
